--- a/assets/scss/mixins.scss
+++ b/assets/scss/mixins.scss
@@ -6,21 +6,21 @@
   transition: background-size 200ms ease;
 
   &:hover {
-    padding-left: 0.4em;
-    padding-right: 0.4em;
-    margin-left: -0.4em;
-    margin-right: -0.4em;
+    padding-left: 0.45em;
+    padding-right: 0.45em;
+    margin-left: -0.45em;
+    margin-right: -0.45em;
     color: #000;
     // There is a bug in Safari: animation isn't applied to the second linear gradient
     background-image:
-      linear-gradient(105deg, transparent 0.45em, #ffd700 0.45em, #ffd700 95%, transparent 95%),
-      linear-gradient(285deg, transparent 0.4em, #ffd700 0.4em, #ffd700 10%, transparent 10%);
+      linear-gradient(105deg, transparent 0.45em, #ffd700 0.45em, #ffd700 55%, transparent 55%),
+      linear-gradient(285deg, transparent 0.38em, #ffd700 0.38em, #ffd700 55%, transparent 55%);
     background-size: 100% 100%;
   }
 }
 
 // This effect visually similar to the previous one but doesn't work properly with multiline links
-// Keep it for use in hero area due to Safari bug with animation
+// Keep it for use in Hero Area due to Safari bug with animation
 @mixin text-hover-effect {
   &::after {
     content: "";
